# ytmimi--markdown-fmt

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml  release-plz.yml  rust.yml
src/: adapters.rs  builder.rs  config.rs  escape.rs  external_formatter.rs  formatter.rs  html_block.rs  lib.rs  links.rs  list.rs  paragraph.rs  table.rs  test.rs
src/adapters/: loose_list.rs  sequential_blocks.rs
src/external_formatter/: default.rs  fn_based.rs
src/formatter/: formatting_states.rs
src/formatter/formatting_states/: format.rs  helpers.rs
src/snapshots/: fmtm_ytmimi_markdown_fmt__test__reformat.snap  fmtm_ytmimi_markdown_fmt__test__reformat_display_math_in_list.snap  fmtm_ytmimi_markdown_fmt__test__reformat_emoji.snap
tests/: commonmark_v0_30_spec.rs  gfm_spec_v0_29_0_gfm_13.rs
tests/common/: mod.rs
tests/source/: nested_lists.md  rust_vec_docstring.md
