[package]
name = "fmtm_ytmimi_markdown_fmt"
version = "0.0.1"
edition = "2021"
readme = "README.md"
description = "Fork of @ytmimi's Markdown formatter; powers FMTM."
authors = [
    "Yacin Tmimi <yacintmimi@gmail.com>",
    "Steven Hé (Sīchàng) <stevensichanghe@gmail.com>",
]
repository = "https://github.com/SichangHe/ytmimi--markdown-fmt"
license = "MIT"
keywords = ["markdown", "commonmark", "formatter"]
include = ["/src/**/*", "/LICENSE", "/README.md", "/CHANGELOG.md"]
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
missing-docs = "deny"

[dependencies]
itertools = "0.13"
pulldown-cmark = { version = "0.11", default-features = false }
unicode-width = "0.1"
unicode-segmentation = "1"
tracing = { version = "0.1", default-features = false }
textwrap = "0.16"

[dev-dependencies]
insta = { version = "1.39", features = ["glob"] }
rust_search = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }

# Compile snapshot testing libraries with optimizations.
[profile.dev.package]
insta = { opt-level = 3 }
similar = { opt-level = 3 }
